# code_ws

./: .gitignore  CMakeLists.txt  code_ws.code-workspace
backup_build (copy)/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
backup_build (copy)/.cmake/api/v1/reply/: cache-v2-1ec70dcddf06eb20284c.json  cmakeFiles-v1-6c76072506c63f8bc432.json  codemodel-v2-0c3fdcbe8762b9eedeb7.json  index-2023-03-09T18-15-07-0691.json  target-arvc_bag_manage-Debug-ec570839872bec8288b1.json  target-arvc_check_dataset-Debug-6a00db7ed5507843f67e.json  target-arvc_check_dataset_normals-Debug-b52e22e87c162d108808.json  target-arvc_compute_normals-Debug-da938679d05bf3b2365a.json  target-arvc_compute_plane_count-Debug-6c9436fe70deb2162174.json  target-arvc_filter_ground_floor-Debug-e14063902221183dc389.json  target-arvc_get_num_of_planes-Debug-4dda75b114d0110ba74c.json  target-arvc_main-Debug-13f65bf7759c2bd11b24.json  target-arvc_pcd2ply-Debug-3aaff8b04c14c6782a35.json  target-arvc_plot_by_binary_label-Debug-a3d097860bbb50fec086.json  target-arvc_plot_by_index-Debug-5f1a9935ef6c4dae6a65.json  target-arvc_random_sampling-Debug-96151aca324f6e3bb038.json  target-arvc_remove_dot_from_extracted_bag_filenames-Debug-c22c07c6e43a500f4917.json  target-arvc_rename_files-Debug-a38dba0458a236250965.json  target-arvc_replace_field-Debug-2817109e31cd3717b2fa.json  target-arvc_view_cloud-Debug-1373a69c147b3aec0a99.json  target-arvc_view_cloud_normals-Debug-94178313bf9436e51bbe.json  target-arvc_view_pcd_plane_by_plane-Debug-253927418631ac981b0f.json  target-gmock-Debug-a7db797c0ab0a55f989b.json  target-gmock_main-Debug-d5f10e932451ca3a809b.json  target-gtest_main-Debug-94d1e2515425b04731d0.json  target-roscpp_generate_messages_cpp-Debug-796c2d967805f7438629.json  target-roscpp_generate_messages_eus-Debug-153ba08f10df172e3836.json  target-roscpp_generate_messages_lisp-Debug-f759f8700b802b6f5de9.json  target-roscpp_generate_messages_nodejs-Debug-455733e3e9f653f3c644.json  target-roscpp_generate_messages_py-Debug-5131faede89430126f38.json  target-rosgraph_msgs_generate_messages_cpp-Debug-ff1a8382df8a7bbd5ccf.json  target-rosgraph_msgs_generate_messages_eus-Debug-f77853e9611c14823e57.json  target-rosgraph_msgs_generate_messages_lisp-Debug-b94953c701b552bc2150.json  target-rosgraph_msgs_generate_messages_nodejs-Debug-f78f29480bb5f198c368.json  target-rosgraph_msgs_generate_messages_py-Debug-1cff48e923bfb4001316.json  target-std_msgs_generate_messages_cpp-Debug-66cbafe3d5d50a64b74f.json  target-std_msgs_generate_messages_eus-Debug-4d31e2cfbee5a67f44ee.json  target-std_msgs_generate_messages_lisp-Debug-9caefe5ad5ba9a18a221.json  target-std_msgs_generate_messages_nodejs-Debug-cad398d0c6d3b7a1eaaf.json  target-std_msgs_generate_messages_py-Debug-ddfcb60707a433a70a83.json
backup_build (copy)/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
backup_build (copy)/catkin_generated/: generate_cached_setup.py  setup_cached.sh
backup_build (copy)/devel/: .catkin
backup_build (copy)/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
backup_build (copy)/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
backup_build (copy)/gtest/googletest/: CTestTestfile.cmake  Makefile
config/: config.yaml
data/: pcdPython.txt
examples/: example_cloud.pcd
examples/pointclouds/: empty_clouds.txt
include/: Curvature.hpp  arvc.h  arvc_axes3d.hpp  arvc_color.hpp  arvc_console.hpp  arvc_plane.hpp  arvc_utils.hpp  arvc_utils_v2.hpp  arvc_viewer.hpp  visualizer_cubes.hpp
scripts/: main.py
src/: change_bag_names.cpp  compute_normals.cpp  get_num_of_planes.cpp  main copy.cpp  main.cpp  pcd2ply copy.cpp  pcd2ply.cpp  plot_by_binary_label.cpp  plot_by_index.cpp  random_downsample.cpp  rename_files.cpp  replace_field.cpp  sort_cloud_by_distance.cpp  truss_plane_detector.cpp  view_cloud.cpp  view_pcd copy.cpp  view_pcd_plane_by_plane.cpp  view_ply.cpp  view_ply_folder.cpp  view_sorted_pc.cpp
src/bagfiles/: bag_manage.cpp  extract_rosbag.cpp  remove_dot_from_extracted_bag_filenames.cpp
src/datasets/: check_dataset.cpp  check_dataset_clouds.cpp  check_dataset_normals.cpp  check_duplicated_clouds.cpp  check_fixed_size.hpp  check_num_points.cpp  check_real_dataset_pcd.cpp  compute_label_weights.cpp  compute_plane_count.cpp  rename_files.cpp
src/pointclouds/: arvc_utils.cpp  clustering_regrow_normals.cpp  compute_normals.cpp  compute_normals_XYZ.cpp  filter_ground_by_RANSAC.cpp  filter_ground_by_density_and_cluster_volume copy.cpp  filter_ground_by_density_and_cluster_volume.cpp  filter_ground_floor.cpp  get_scale.cpp  ground_segmentation_and_filtering.cpp  multi_neighbor_normals.cpp  pcd2ply.cpp  pcd_to_pcdNormals.cpp  plot_by_binary_label.cpp  plot_multiple_clouds.cpp  random_sampling.cpp  read_cloud.hpp  roughness.cpp  utils.cpp  view_cloud.cpp  view_cloud_normals.cpp  view_sorted_pc.cpp  write_cloud.hpp
src/pointclouds/features/: Curvature.hpp  compute_discretized_PCA.cpp  compute_normals.cpp  compute_normals_XYZ.cpp  multi_neighbor_normals.cpp  normal_estimation.hpp  roughness copy.cpp  roughness.cpp
src/pointclouds/filters/: downsample_cloud.cpp  farthest_point_downsample.hpp  random_downsample_cloud.hpp  random_sampling.cpp  range_filter.cpp
src/pointclouds/segmentation/: clustering_regrow_normals.cpp  get_num_of_planes.cpp  ground_segmentation_and_filtering copy.cpp  ground_segmentation_and_filtering.cpp  plane_segmentation_and_filtering copy.cpp
src/pointclouds/transforms/: pcd2ply.cpp  pointcloud2_to_eigen.cpp  serialise.hpp
src/pointclouds/visualization/: plot_by_binary_label.cpp  plot_by_confusion_matrix.cpp  plot_by_confusion_matrix_additional_structures_thesis.cpp  plot_by_confusion_matrix_arvc_truss_test_thesis.cpp  plot_by_curvature.cpp  plot_by_index.cpp  plot_by_normals.cpp  plot_by_paralelepiped.cpp  plot_cloud.cpp  plot_correct_vs_wrong.cpp  plot_label_random_color.cpp  sncs_confusion_matrix_comparison.cpp  view_cloud.cpp  view_cloud_normals.cpp  view_cloud_normals.hpp  view_pcd_plane_by_plane.cpp
